--- a/AlphabetPermutationUsage.ipynb
+++ b/AlphabetPermutationUsage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,35 +19,35 @@
      "output_type": "stream",
      "text": [
       "Permutation:\n",
-      "a -> n\n",
-      "b -> v\n",
-      "c -> y\n",
-      "d -> a\n",
-      "e -> k\n",
-      "f -> u\n",
-      "g -> d\n",
-      "h -> f\n",
-      "i -> o\n",
-      "j -> s\n",
-      "k -> p\n",
-      "l -> e\n",
-      "m -> h\n",
-      "n -> g\n",
-      "o -> t\n",
-      "p -> j\n",
-      "q -> l\n",
-      "r -> b\n",
-      "s -> c\n",
-      "t -> q\n",
-      "u -> w\n",
-      "v -> x\n",
-      "w -> i\n",
+      "a -> i\n",
+      "b -> m\n",
+      "c -> v\n",
+      "d -> g\n",
+      "e -> s\n",
+      "f -> f\n",
+      "g -> w\n",
+      "h -> d\n",
+      "i -> a\n",
+      "j -> t\n",
+      "k -> e\n",
+      "l -> l\n",
+      "m -> k\n",
+      "n -> o\n",
+      "o -> c\n",
+      "p -> u\n",
+      "q -> n\n",
+      "r -> j\n",
+      "s -> z\n",
+      "t -> p\n",
+      "u -> x\n",
+      "v -> y\n",
+      "w -> b\n",
       "x -> r\n",
-      "y -> m\n",
-      "z -> z\n",
-      "Permutation: {'a': 'n', 'b': 'v', 'c': 'y', 'd': 'a', 'e': 'k', 'f': 'u', 'g': 'd', 'h': 'f', 'i': 'o', 'j': 's', 'k': 'p', 'l': 'e', 'm': 'h', 'n': 'g', 'o': 't', 'p': 'j', 'q': 'l', 'r': 'b', 's': 'c', 't': 'q', 'u': 'w', 'v': 'x', 'w': 'i', 'x': 'r', 'y': 'm', 'z': 'z'}\n",
+      "y -> q\n",
+      "z -> h\n",
+      "Permutation: {'a': 'i', 'b': 'm', 'c': 'v', 'd': 'g', 'e': 's', 'f': 'f', 'g': 'w', 'h': 'd', 'i': 'a', 'j': 't', 'k': 'e', 'l': 'l', 'm': 'k', 'n': 'o', 'o': 'c', 'p': 'u', 'q': 'n', 'r': 'j', 's': 'z', 't': 'p', 'u': 'x', 'v': 'y', 'w': 'b', 'x': 'r', 'y': 'q', 'z': 'h'}\n",
       "Original string: hello world\n",
-      "Permuted string: fkeet itbea\n"
+      "Permuted string: dsllc bcjlg\n"
      ]
     }
    ],
@@ -90,13 +90,6 @@
     "print(\"Original string:\", string)\n",
     "print(\"Permuted string:\", permuted_string)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
