--- a/Probabilityusage.ipynb
+++ b/Probabilityusage.ipynb
@@ -28,21 +28,13 @@
    "outputs": [],
    "source": [
     "pm = ProbabilityMatrix(text=text, alphabet=alphabet)\n",
-    "unknown_chars = pm.unknown_chars()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "unknown_chars = pm.unknown_chars()\n",
     "pm.preprocess_text(unknown_chars=unknown_chars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
