Added cipher_key attribute and changed alphabet handwritten

--- a/AlphabetPermutationUsage.ipynb
+++ b/AlphabetPermutationUsage.ipynb
@@ -2,16 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.AlphabetPermutation import AlphabetPermutation"
+    "from src.AlphabetPermutation import AlphabetPermutation\n",
+    "import string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a',\n",
+       " 'b',\n",
+       " 'c',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " 'f',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 'j',\n",
+       " 'k',\n",
+       " 'l',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 'o',\n",
+       " 'p',\n",
+       " 'q',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'u',\n",
+       " 'v',\n",
+       " 'w',\n",
+       " 'x',\n",
+       " 'y',\n",
+       " 'z',\n",
+       " ' ']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alphabet = list(string.ascii_lowercase)\n",
+    "alphabet.append(' ')\n",
+    "alphabet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,68 +68,39 @@
      "output_type": "stream",
      "text": [
       "Permutation:\n",
-      "a -> i\n",
-      "b -> m\n",
-      "c -> v\n",
-      "d -> g\n",
-      "e -> s\n",
-      "f -> f\n",
-      "g -> w\n",
-      "h -> d\n",
-      "i -> a\n",
-      "j -> t\n",
-      "k -> e\n",
-      "l -> l\n",
-      "m -> k\n",
-      "n -> o\n",
-      "o -> c\n",
-      "p -> u\n",
-      "q -> n\n",
-      "r -> j\n",
-      "s -> z\n",
-      "t -> p\n",
+      "a -> u\n",
+      "b -> h\n",
+      "c -> d\n",
+      "d -> e\n",
+      "e -> t\n",
+      "f -> q\n",
+      "g -> i\n",
+      "h -> m\n",
+      "i -> p\n",
+      "j -> y\n",
+      "k -> l\n",
+      "l -> v\n",
+      "m -> b\n",
+      "n -> g\n",
+      "o -> k\n",
+      "p -> f\n",
+      "q -> r\n",
+      "r -> a\n",
+      "s -> j\n",
+      "t -> n\n",
       "u -> x\n",
-      "v -> y\n",
-      "w -> b\n",
-      "x -> r\n",
-      "y -> q\n",
-      "z -> h\n",
-      "Permutation: {'a': 'i', 'b': 'm', 'c': 'v', 'd': 'g', 'e': 's', 'f': 'f', 'g': 'w', 'h': 'd', 'i': 'a', 'j': 't', 'k': 'e', 'l': 'l', 'm': 'k', 'n': 'o', 'o': 'c', 'p': 'u', 'q': 'n', 'r': 'j', 's': 'z', 't': 'p', 'u': 'x', 'v': 'y', 'w': 'b', 'x': 'r', 'y': 'q', 'z': 'h'}\n",
+      "v -> w\n",
+      "w -> s\n",
+      "x -> z\n",
+      "y -> o\n",
+      "z -> c\n",
+      "Permutation: {'a': 'u', 'b': 'h', 'c': 'd', 'd': 'e', 'e': 't', 'f': 'q', 'g': 'i', 'h': 'm', 'i': 'p', 'j': 'y', 'k': 'l', 'l': 'v', 'm': 'b', 'n': 'g', 'o': 'k', 'p': 'f', 'q': 'r', 'r': 'a', 's': 'j', 't': 'n', 'u': 'x', 'v': 'w', 'w': 's', 'x': 'z', 'y': 'o', 'z': 'c'}\n",
       "Original string: hello world\n",
-      "Permuted string: dsllc bcjlg\n"
+      "Permuted string: mtvvk skave\n"
      ]
     }
    ],
    "source": [
-    "alphabet = [\n",
-    "    \"a\",\n",
-    "    \"b\",\n",
-    "    \"c\",\n",
-    "    \"d\",\n",
-    "    \"e\",\n",
-    "    \"f\",\n",
-    "    \"g\",\n",
-    "    \"h\",\n",
-    "    \"i\",\n",
-    "    \"j\",\n",
-    "    \"k\",\n",
-    "    \"l\",\n",
-    "    \"m\",\n",
-    "    \"n\",\n",
-    "    \"o\",\n",
-    "    \"p\",\n",
-    "    \"q\",\n",
-    "    \"r\",\n",
-    "    \"s\",\n",
-    "    \"t\",\n",
-    "    \"u\",\n",
-    "    \"v\",\n",
-    "    \"w\",\n",
-    "    \"x\",\n",
-    "    \"y\",\n",
-    "    \"z\",\n",
-    "    \" \",\n",
-    "]\n",
     "string = \"hello world\"\n",
     "permutation_generator = AlphabetPermutation(alphabet)\n",
     "permutation = permutation_generator.describe_permutation()\n",
@@ -90,6 +110,12 @@
     "print(\"Original string:\", string)\n",
     "print(\"Permuted string:\", permuted_string)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -108,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
