--- a/Probabilityusage.ipynb
+++ b/Probabilityusage.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"moby_dick.txt\", \"r\") as file:\n",
+    "with open(\"texts/moby_dick.txt\", \"r\") as file:\n",
     "    text = file.read()\n",
     "\n",
     "alphabet = list(\"abcdefghijklmnopqrstuvwxyz \")"
