--- a/AlphabetPermutationUsage.ipynb
+++ b/AlphabetPermutationUsage.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "alphabet = list(string.ascii_lowercase)\n",
-    "alphabet.append(' ')\n",
+    "alphabet.append(\" \")\n",
     "alphabet"
    ]
   },
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
