--- a/AlphabetPermutationUsage.ipynb
+++ b/AlphabetPermutationUsage.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.AlphabetPermutation import AlphabetPermutation\n",
-    "import string"
+    "from string import ascii_lowercase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,20 +47,20 @@
        " ' ']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alphabet = list(string.ascii_lowercase)\n",
+    "alphabet = list(ascii_lowercase)\n",
     "alphabet.append(' ')\n",
     "alphabet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,35 +68,35 @@
      "output_type": "stream",
      "text": [
       "Permutation:\n",
-      "a -> u\n",
-      "b -> h\n",
-      "c -> d\n",
-      "d -> e\n",
-      "e -> t\n",
-      "f -> q\n",
-      "g -> i\n",
-      "h -> m\n",
-      "i -> p\n",
-      "j -> y\n",
-      "k -> l\n",
-      "l -> v\n",
-      "m -> b\n",
-      "n -> g\n",
-      "o -> k\n",
-      "p -> f\n",
-      "q -> r\n",
-      "r -> a\n",
-      "s -> j\n",
-      "t -> n\n",
-      "u -> x\n",
-      "v -> w\n",
-      "w -> s\n",
-      "x -> z\n",
-      "y -> o\n",
-      "z -> c\n",
-      "Permutation: {'a': 'u', 'b': 'h', 'c': 'd', 'd': 'e', 'e': 't', 'f': 'q', 'g': 'i', 'h': 'm', 'i': 'p', 'j': 'y', 'k': 'l', 'l': 'v', 'm': 'b', 'n': 'g', 'o': 'k', 'p': 'f', 'q': 'r', 'r': 'a', 's': 'j', 't': 'n', 'u': 'x', 'v': 'w', 'w': 's', 'x': 'z', 'y': 'o', 'z': 'c'}\n",
+      "a -> j\n",
+      "b -> a\n",
+      "c -> w\n",
+      "d -> p\n",
+      "e -> q\n",
+      "f -> f\n",
+      "g -> m\n",
+      "h -> z\n",
+      "i -> h\n",
+      "j -> r\n",
+      "k -> g\n",
+      "l -> x\n",
+      "m -> l\n",
+      "n -> o\n",
+      "o -> v\n",
+      "p -> y\n",
+      "q -> u\n",
+      "r -> b\n",
+      "s -> i\n",
+      "t -> s\n",
+      "u -> d\n",
+      "v -> t\n",
+      "w -> c\n",
+      "x -> e\n",
+      "y -> k\n",
+      "z -> n\n",
+      "Permutation: {'a': 'j', 'b': 'a', 'c': 'w', 'd': 'p', 'e': 'q', 'f': 'f', 'g': 'm', 'h': 'z', 'i': 'h', 'j': 'r', 'k': 'g', 'l': 'x', 'm': 'l', 'n': 'o', 'o': 'v', 'p': 'y', 'q': 'u', 'r': 'b', 's': 'i', 't': 's', 'u': 'd', 'v': 't', 'w': 'c', 'x': 'e', 'y': 'k', 'z': 'n'}\n",
       "Original string: hello world\n",
-      "Permuted string: mtvvk skave\n"
+      "Permuted string: zqxxv cvbxp\n"
      ]
     }
    ],
