Started likelihood function

--- a/AlphabetPermutationUsage.ipynb
+++ b/AlphabetPermutationUsage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,25 +47,20 @@
        " ' ']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
     "alphabet = list(ascii_lowercase)\n",
     "alphabet.append(' ')\n",
-=======
-    "alphabet = list(string.ascii_lowercase)\n",
-    "alphabet.append(\" \")\n",
->>>>>>> d71305f707c726adc1dd3bcd2e9ee4e631ab55fa
     "alphabet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,35 +68,35 @@
      "output_type": "stream",
      "text": [
       "Permutation:\n",
-      "a -> j\n",
-      "b -> a\n",
-      "c -> w\n",
-      "d -> p\n",
-      "e -> q\n",
-      "f -> f\n",
-      "g -> m\n",
-      "h -> z\n",
-      "i -> h\n",
-      "j -> r\n",
-      "k -> g\n",
-      "l -> x\n",
-      "m -> l\n",
-      "n -> o\n",
-      "o -> v\n",
-      "p -> y\n",
-      "q -> u\n",
-      "r -> b\n",
-      "s -> i\n",
-      "t -> s\n",
+      "a -> p\n",
+      "b -> m\n",
+      "c -> y\n",
+      "d -> v\n",
+      "e -> n\n",
+      "f -> l\n",
+      "g -> t\n",
+      "h -> s\n",
+      "i -> u\n",
+      "j -> g\n",
+      "k -> b\n",
+      "l -> j\n",
+      "m -> e\n",
+      "n -> k\n",
+      "o -> r\n",
+      "p -> i\n",
+      "q -> c\n",
+      "r -> w\n",
+      "s -> z\n",
+      "t -> a\n",
       "u -> d\n",
-      "v -> t\n",
-      "w -> c\n",
-      "x -> e\n",
-      "y -> k\n",
-      "z -> n\n",
-      "Permutation: {'a': 'j', 'b': 'a', 'c': 'w', 'd': 'p', 'e': 'q', 'f': 'f', 'g': 'm', 'h': 'z', 'i': 'h', 'j': 'r', 'k': 'g', 'l': 'x', 'm': 'l', 'n': 'o', 'o': 'v', 'p': 'y', 'q': 'u', 'r': 'b', 's': 'i', 't': 's', 'u': 'd', 'v': 't', 'w': 'c', 'x': 'e', 'y': 'k', 'z': 'n'}\n",
+      "v -> x\n",
+      "w -> o\n",
+      "x -> q\n",
+      "y -> f\n",
+      "z -> h\n",
+      "Permutation: {'a': 'p', 'b': 'm', 'c': 'y', 'd': 'v', 'e': 'n', 'f': 'l', 'g': 't', 'h': 's', 'i': 'u', 'j': 'g', 'k': 'b', 'l': 'j', 'm': 'e', 'n': 'k', 'o': 'r', 'p': 'i', 'q': 'c', 'r': 'w', 's': 'z', 't': 'a', 'u': 'd', 'v': 'x', 'w': 'o', 'x': 'q', 'y': 'f', 'z': 'h'}\n",
       "Original string: hello world\n",
-      "Permuted string: zqxxv cvbxp\n"
+      "Permuted string: snjjr orwjv\n"
      ]
     }
    ],
@@ -115,12 +110,6 @@
     "print(\"Original string:\", string)\n",
     "print(\"Permuted string:\", permuted_string)"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -139,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
