default filename in save_gif)

--- a/main.ipynb
+++ b/main.ipynb
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "cipher_breaker.generate_animation(filename=\"she is not.gif\")"
+    "cipher_breaker.generate_animation()"
    ]
   }
  ],
