Some code for plotting + minor fix in main

--- a/main.ipynb
+++ b/main.ipynb
@@ -290,7 +290,7 @@
     "    ciphered_text=encoded_text,\n",
     "    probability_table=probability_matrix.probability_table,\n",
     ")\n",
-    "cipher_breaker.break_cipher_nstart(iterations=100000, print_interval=100, nstart = 5)"
+    "cipher_breaker_nstart.break_cipher_nstart(iterations=100000, print_interval=100, nstart = 5)"
    ]
   },
   {
