--- a/brutta.ipynb
+++ b/brutta.ipynb
@@ -2,31 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {\"A\": 21}"
+    "d = {\"A\": [10, 23, 32], \"B\": [10, 23, 21]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d.get(\"A\") == None"
+    "max([1, 2, 3])"
    ]
   }
  ],
