last MCMC running + evaluation

--- a/try.ipynb
+++ b/try.ipynb
@@ -118,7 +118,9 @@
     "\n",
     "war_and_peace_2_characters = break_into_two_chars(text)\n",
     "\n",
-    "total_count = sum(Counter(war_and_peace_2_characters).values()) # Count total number of characters in text \n",
+    "total_count = sum(\n",
+    "    Counter(war_and_peace_2_characters).values()\n",
+    ")  # Count total number of characters in text\n",
     "\n",
     "# Create the probability table by counting the bigrams\n",
     "probability_table = {\n",
@@ -127,7 +129,7 @@
     "}\n",
     "\n",
     "with open(\"outputs/prob_table_wrong.txt\", \"w\") as file:\n",
-    "    print(probability_table, file=file)\n"
+    "    print(probability_table, file=file)"
    ]
   },
   {
@@ -160,13 +162,15 @@
     }
    ],
    "source": [
-    "#plaintext = \"to be or not to be that is the question whether tis nobler in the mind to suffer the slings and arrows of outrageous fortune or to take arms against a sea of troubles\"\n",
+    "# plaintext = \"to be or not to be that is the question whether tis nobler in the mind to suffer the slings and arrows of outrageous fortune or to take arms against a sea of troubles\"\n",
     "\n",
-    "#plaintext = \"It s a blue world without you It s a blue world alone Yeah, well, this mad world made me crazy Might just turn around, do one-eighty I aint politickin, I ain t kissin no babies The devil on my doorstep bein so shady  don t trip We don t gotta let him in, don t trip Yeah, yeah\t\"\n",
+    "# plaintext = \"It s a blue world without you It s a blue world alone Yeah, well, this mad world made me crazy Might just turn around, do one-eighty I aint politickin, I ain t kissin no babies The devil on my doorstep bein so shady  don t trip We don t gotta let him in, don t trip Yeah, yeah\t\"\n",
     "\n",
     "# plaintext = \"Look, I was gonna go easy on you not to hurt your feelings But I'm only going to get this one chance (six minutes-, six minutes-) Something's wrong, I can feel it (six minutes, Slim Shady, you're on!) Just a feeling I've got, like something's about to happen, but I don't know what If that means what I think it means, we're in trouble, big trouble And if he is as bananas as you say, I'm not taking any chances You are just what the doc ordered I'm beginnin' to feel like a Rap God, Rap God All my people from the front to the back nod, back nod Now, who thinks their arms are long enough to slap box, slap box? They said I rap like a robot, so call me Rap-bot\"\n",
     "\n",
-    "plaintext = text = \"she is not acting by design. As yet she cannot even be certain of the degree of her own regard, nor of its reasonableness. She has known him only a fortnight. She danced four dances with him at Meryton; she saw him one morning at his own house, and has since dined in company with him four times.\"\n",
+    "plaintext = (\n",
+    "    text\n",
+    ") = \"she is not acting by design. As yet she cannot even be certain of the degree of her own regard, nor of its reasonableness. She has known him only a fortnight. She danced four dances with him at Meryton; she saw him one morning at his own house, and has since dined in company with him four times.\"\n",
     "\n",
     "true_cipher = generate_cipher()\n",
     "ciphered_text = encode_text(plaintext, true_cipher)\n",
@@ -233,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
