--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,6 @@
     "    B = np.zeros((n_states, n_states))\n",
     "\n",
     "    for i in range(n_states):\n",
-    "        print(i)\n",
     "        for j  in range(n_states):\n",
     "            for k in range(len(observed)):\n",
     "                if observed[k] == j:\n",
@@ -372,39 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.17166996, 0.82833004],\n",
-       "       [0.68218587, 0.31781413],\n",
-       "       [0.37120259, 0.62879741]])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gamma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -412,13 +381,52 @@
        "       [0.31781413, 0.72856372]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "gamma\n",
     "update_B(gamma, observed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Baum_Welch(A, B_start, pi, observed, maxIter = 100):\n",
+    "    B = np.copy(B_start)\n",
+    "    for it in range(maxIter):\n",
+    "        alpha = forward_HMM(A, B, pi, observed)\n",
+    "        beta = backward_HMM(A, B, observed)\n",
+    "        gamma = compute_all_conditional(alpha, beta)\n",
+    "        B = update_B(gamma, observed)\n",
+    "    return B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.96425274e-61, 9.26996259e-55],\n",
+       "       [1.00000000e+00, 1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B_start = np.zeros((2, 2)) + 0.5\n",
+    "Baum_Welch(A, B_start, pi, observed)"
    ]
   }
  ],
